--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "serve": "nodemon -w server.js server.js",
     "test": "jest",
     "watch": "rollup -c -w",
-    "postinstall": "yarn run build",
+    "postinstall": "yarn run build"
   },
 
   "dependencies": {
